Fix textinput overflow to parent

--- a/project0-search/resources/css/advSearch.css
+++ b/project0-search/resources/css/advSearch.css
@@ -10,6 +10,7 @@ body{
     height: 25px;
     padding: 1px 8px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .adv-search-header {
